[project]
name = "telegram-bot-sample"
version = "0.1.0"
description = ""
authors = [
    {name = "manabreakmura",email = "174273321+manabreakmura@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "python-telegram-bot (>=21.10,<22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
